[package]
name = "reflexu_worker_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = "1.5"
aws-sdk-s3 = "1.48"
tokio = { version = "1", features = ["full"] }
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
image = "0.24"
imageproc = "0.23"
rusttype = "0.9"
dotenv = "0.15"
tempfile = "3"
regex = "1"
